RESOLVED FIXED116946
PresentationAttributeCacheCleaner::m_hitCount is never initialized
https://bugs.webkit.org/show_bug.cgi?id=116946
Summary PresentationAttributeCacheCleaner::m_hitCount is never initialized
Ryosuke Niwa
Reported 2013-05-29 01:51:44 PDT
PresentationAttributeCacheCleaner::m_hitCount is never initialized
Attachments
Fixes the bug (1.35 KB, patch)
2013-05-29 01:52 PDT, Ryosuke Niwa
kling: review+
Ryosuke Niwa
Comment 1 2013-05-29 01:52:24 PDT
Created attachment 203139 [details] Fixes the bug
Ryosuke Niwa
Comment 2 2013-05-29 01:53:18 PDT
Note You need to log in before you can comment on or make changes to this bug.