PresentationAttributeCacheCleaner::m_hitCount is never initialized https://bugs.webkit.org/show_bug.cgi?id=116946

Reviewed by Andreas Kling.

Merge https://chromium.googlesource.com/chromium/blink/+/70be7ddc41141ef6dec7795d37842c27dab2e194.

* dom/StyledElement.cpp:
(WebCore::PresentationAttributeCacheCleaner::PresentationAttributeCacheCleaner):


Canonical link: https://commits.webkit.org/135215@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@150877 268f45cc-cd09-0410-ab3c-d52691b4dbfc